--- a/index.html
+++ b/index.html
@@ -96,7 +96,9 @@
                 <img src="./images/architect.png" alt="architect image">
 
             </div>
-            <button class="btn-primary btn-exceptional"><span class="large">10+ Year </span>Experience</button>
+            <div class="large-btn-div">
+                <button class="btn-primary btn-exceptional"><span class="large-btn">10+ Year </span>Experience</button>
+            </div>
         </section>
 
         <section id="facts">
