--- a/index.html
+++ b/index.html
@@ -12,8 +12,9 @@
 </head>
 
 <body>
+    
     <header>
-
+                            <!-- nav start -->
         <nav>
             <h2 class="logo">G3 Architects</h2>
             <ul>
@@ -23,7 +24,9 @@
                 <li><a href="#">Login</a></li>
             </ul>
         </nav>
+                           <!-- nav end -->
 
+                           <!-- banner start -->
         <div class="banner">
             <div class="banner-text">
                 <h1>brand new group of architects</h1>
@@ -36,10 +39,12 @@
                 <img src="./images/banner.png" alt="display image">
             </div>
         </div>
-
+                              <!-- banner end -->
     </header>
-    <main>
 
+
+    <main>
+                                    <!-- features section start -->
         <section id="features">
             <div class="features-image">
                 <div><img src="./images/team1.png" alt="team photo"></div>
@@ -56,7 +61,9 @@
                 <button class="btn-primary">Explore More</button>
             </div>
         </section>
+                                     <!-- features section end -->
 
+                                     <!-- more features section start -->
         <section id="more-features">
             <div class="more-features-text">
                 <div class="more-features-head">
@@ -84,12 +91,6 @@
                             majority have suffered alteration in some form, by injected humour, or randomised...........
                         </p>
                     </div>
-                    <div>
-                        <h3>super easy to edit</h3>
-                        <p class="small-desc">There are many variations of passages of Lorem Ipsum available, but the
-                            majority have suffered alteration in some form, by injected humour, or randomised...........
-                        </p>
-                    </div>
                 </div>
             </div>
             <div class="more-features-image">
@@ -100,14 +101,12 @@
                 <button class="btn-primary btn-exceptional"><span class="large-btn">10+ Year </span>Experience</button>
             </div>
         </section>
+                                       <!-- more features section end -->
 
+                                       <!-- facts section start -->
         <section id="facts">
             <h1>Some Facts</h1>
-            <p class="section-desc">There are many variations of passages of Lorem Ipsum available, but the majority
-                have suffered alteration.</p>
-
-
-
+            <p class="section-desc">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration.</p>
             <div class="facts-box">
                 <div class="ribon-box">
                     <img src="./images/icons/ribon.png" alt="ribon icon">
@@ -115,21 +114,18 @@
                     <p class="section-desc facts-desc">Awards Winnings</p>
                     <div class="anim"></div>
                 </div>
-
                 <div class="project-box">
                     <img src="./images/icons/projects.png" alt="projects icon">
                     <h1>1458</h1>
                     <p class="section-desc facts-desc">Project Finished</p>
                     <div class="anim"></div>
                 </div>
-
                 <div class="customer-box">
                     <img src="./images/icons/customers.png" alt="customers icon">
                     <h1>590</h1>
                     <p class="section-desc facts-desc">Clients Worked</p>
                     <div class="anim"></div>
                 </div>
-
                 <div class="email-box">
                     <img src="./images/icons/email.png" alt="email icon">
                     <h1>22578</h1>
@@ -137,11 +133,10 @@
                     <div class="anim"></div>
                 </div>
             </div>
-
-
         </section>
+                                   <!-- facts section end -->
 
-
+                                   <!-- choice section start -->
         <section id="choice">
             <h1>choice us for your dream project</h1>
             <div class="employees">
@@ -175,7 +170,9 @@
                 </div>
             </div>
         </section>
+                                       <!-- choice section end -->
 
+                                       <!-- sponsors section start -->
         <section id="sponsors">
             <div class="sponsors-text">
                 <h1>Our Sponsors</h1>
@@ -189,12 +186,14 @@
                 <div><img src="./images/sponsors/telerama.png" alt="telegram logo"></div>
             </div>
         </section>
+                                     <!-- sponsors section end -->
 
-        <section id="contact"></section>
     </main>
+
     <footer>
         <p class="section-desc">All rights reserved copyright@2023 startup landing page design</p>
     </footer>
+
 </body>
 
 </html>
