--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
 
     <link rel="stylesheet" href="./styles/style.css">
 
-    <title>Assignment two</title>
+    <title>Architect's Paradise</title>
+
 </head>
 
 <body>
@@ -24,9 +25,9 @@
                 <li><a href="#">Login</a></li>
             </ul>
         </nav>
-                           <!-- nav end -->
+                                <!-- nav end -->
 
-                           <!-- banner start -->
+                                <!-- banner start -->
         <div class="banner">
             <div class="banner-text">
                 <h1>brand new group of architects</h1>
@@ -39,12 +40,12 @@
                 <img src="./images/banner.png" alt="display image">
             </div>
         </div>
-                              <!-- banner end -->
+                                <!-- banner end -->
     </header>
 
 
     <main>
-                                    <!-- features section start -->
+                                <!-- features section start -->
         <section id="features">
             <div class="features-image">
                 <div><img src="./images/team1.png" alt="team photo"></div>
@@ -61,9 +62,9 @@
                 <button class="btn-primary">Explore More</button>
             </div>
         </section>
-                                     <!-- features section end -->
+                                    <!-- features section end -->
 
-                                     <!-- more features section start -->
+                                    <!-- more features section start -->
         <section id="more-features">
             <div class="more-features-text">
                 <div class="more-features-head">
@@ -101,9 +102,9 @@
                 <button class="btn-primary btn-exceptional"><span class="large-btn">10+ Year </span>Experience</button>
             </div>
         </section>
-                                       <!-- more features section end -->
+                                    <!-- more features section end -->
 
-                                       <!-- facts section start -->
+                                    <!-- facts section start -->
         <section id="facts">
             <h1>Some Facts</h1>
             <p class="section-desc">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration.</p>
